feat: improve font size

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@ body,
 }
 
 html {
+  font-size: 14.5px;
   --at-apply: transition duration-100 ease-in-out;
   --at-apply: font-sans  antialiased text-$text-color;
   --at-apply: bg-$surface-ground;
